--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>海马轻帆</title>
-  <link rel="stylesheet" href="/index.css" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 <body>
   <div id="root"></div>
